<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_empty">

    <fragment
        android:id="@+id/navigation_home"
        android:name="wifi.codewl.readers.view.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_subscriptions"
        android:name="wifi.codewl.readers.view.fragment.subscriptions.SubscriptionsFragment"
        android:label="@string/title_subscriptions"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="wifi.codewl.readers.view.fragment.library.LibraryFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="wifi.codewl.readers.view.fragment.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_empty"
        android:name="wifi.codewl.readers.view.fragment.notifications.NotificationsFragment"
        tools:layout="@layout/fragment_empty"/>

</navigation>